--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/budget.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/budget.html
@@ -8,11 +8,10 @@
 <div class="flex flex-col md:flex-row min-h-screen">
   {% include "partials/admin_sidebar.html" %}
 
-  <main class="flex-1 bg-gray-100 p-4 sm:p-6">
+  <main id="mainContent" class="flex-1 bg-gray-100 p-4 sm:p-6 transition-all duration-300 ease-in-out">
     <section id="budget" class="fade-in w-full p-4 sm:p-6">
       <h2 class="text-xl sm:text-2xl font-bold mb-4 text-center sm:text-left">Annual Budget</h2>
 
-      <!-- Centered container -->
       <div class="bg-white p-3 sm:p-4 rounded-lg shadow mb-6 flex justify-center">
         <div class="bg-white p-4 sm:p-6 md:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md lg:max-w-lg">
           <h2 class="text-lg sm:text-2xl font-bold text-gray-800 mb-4 sm:mb-6 text-center">
