--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
@@ -9,7 +9,7 @@
 <div class="flex flex-col md:flex-row min-h-screen bg-gray-50">
   {% include "partials/admin_sidebar.html" %}
 
-  <div class="flex-1 w-full max-w-2xl lg:max-w-4xl mx-auto px-3 sm:px-6 md:px-8 py-6">
+  <div id="mainContent" class="flex-1 w-full max-w-2xl lg:max-w-4xl mx-auto px-3 sm:px-6 md:px-8 py-6">
     
     <h2 class="text-xl sm:text-2xl font-semibold text-gray-800 mb-5 text-center md:text-left">
       {% if edit_mode %}Edit Program{% else %}Create Program{% endif %}
@@ -80,8 +80,4 @@
   </div>
 </div>
 
-<!-- Custom Tailwind Reusable Styles -->
-<style>
-  
-</style>
 {% endblock %}
