--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/view_projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/view_projects.html
@@ -8,7 +8,7 @@
 <div class="flex flex-col md:flex-row min-h-screen">
     {% include "partials/admin_sidebar.html" %}
 
-    <div class="flex-1 px-4 sm:px-6 md:px-8 py-6 overflow-x-auto">
+    <div id="mainContent" class="flex-1 px-4 sm:px-6 md:px-8 py-6 overflow-x-auto">
         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold mb-6 text-center">Project Budget Overview</h1>
 
         <!-- Filter Form -->
