--- a/ciet_pmu/templates/layout.html
+++ b/ciet_pmu/templates/layout.html
@@ -18,5 +18,7 @@
     <div>
         {% include 'partials/footer.html' %}
     </div>
+
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
