--- a/ciet_pmu/login/templates/login/login.html
+++ b/ciet_pmu/login/templates/login/login.html
@@ -20,7 +20,7 @@
         <label
           for="username"
           class="block text-sm font-medium text-gray-700 mb-1"
-          >Username</label
+          >Username or Email</label
         >
         <input
           type="text"
