--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Project Report - PDF</title>
+    <link rel="stylesheet" href="{% static "css/pdf_styles.css" %}">
 </head>
 <body class="pdf-body">
     <h2 class="pdf-title">Activity Completion Report</h2>
