--- a/ciet_pmu/admin_login/templates/admin_login/admin_login.html
+++ b/ciet_pmu/admin_login/templates/admin_login/admin_login.html
@@ -21,7 +21,7 @@
         <label
           for="username"
           class="block text-sm font-medium text-gray-700 mb-1"
-          >Username or Email</label
+          >Username</label
         >
         <input
           type="text"
